# fairmont

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  GEMINI.md  POC_IMPLEMENTATION_SUMMARY.md  POC_QUICK_REFERENCE.md  POC_WEEK1_REPORT.txt  README.md  deploy.ps1  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  MIGRATION_TO_DETERMINISTIC.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  store.py
backend/app/api/: dependencies.py
backend/app/models/: __init__.py  boq_item.py  extracted_image.py  merge_report.py  processing_task.py  progress.py  quantity_summary.py  quotation.py  responses.py  source_document.py
backend/app/services/: dimension_formatter.py  document_role_detector.py  excel_generator.py  fabric_validator.py  gemini_client.py  google_drive_service.py  google_sheets_generator.py  image_extractor.py  image_matcher.py  image_matcher_deterministic.py  image_selector.py  item_normalizer.py  merge_service.py  observability.py  parsing_service.py  pdf_parser.py  quantity_parser.py  quotation_format.py  service_factory.py  skill_loader.py
backend/app/utils/: __init__.py  document_type.py  errors.py  file_manager.py  sse.py  validators.py
backend/docs/: DEBUGGING_IMAGE_MATCHING.md  DETERMINISTIC_IMAGE_MATCHING.md  LOGO_MATCHING_FIX.md  VISION_FILTERING_IMPLEMENTATION.md
backend/scripts/: compare_models.py
backend/tests/: conftest.py
backend/tests/contract/: __init__.py  test_export_api.py  test_parse_api.py  test_sheets_api.py  (+2 more)
(+117 files in other folders)
